fix background image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,11 +57,16 @@ h1 h2 {
     width: 100%;
     height: 90vh;
 
-    background: url(/assets/img/bg_jan.jpg) no-repeat center center fixed;
+    background-image: url(/assets/img/bg_jan.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-position: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    /*background-attachment: fixed;*/
 }
 .section-hero {
     color: #ffffff;
